<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LYT_JoingGameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/achtergrond"
    android:orientation="vertical"
    tools:context=".Activities.JoinGameActivity">

...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapSentences"
                android:maxLength="10"
                android:textColor="@color/white"
                tools:ignore="Autofill,LabelFor,NestedWeights" />

            <Button
                android:id="@+id/button_pick_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/yellowAntw"
                android:text="@string/pick_color"
                tools:ignore="UnusedAttribute" />
...
                android:textColor="@color/white"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_join_game"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellowAntw"
        android:text="@string/join"
...
