...
            android:gravity="center"
            android:text="@string/game_time_string"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_time_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellowAntw"
            android:text="@string/picker"
            tools:ignore="UnusedAttribute" />

...
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="InefficientWeight" />

    <Button
        android:id="@+id/button_create_game"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellowAntw"
        android:text="@string/create"
        tools:ignore="UnusedAttribute" />
...
