...
    android:background="@drawable/achtergrond_logo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/button_create_game_window"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"
...
